Moving to newer java version